<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityExpense">

    <EditText
        android:id="@+id/edtExpFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/expense_for"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <EditText
        android:id="@+id/edtExpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/expense_date"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <EditText
        android:id="@+id/edtExpValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/expense_value"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <Spinner
        android:id="@+id/spnQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/txtVwTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-medium"/>


    <ImageView
        android:id="@+id/imgExp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/camera" />

    <Button
        android:id="@+id/btnSave"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:fontFamily="sans-serif-condensed-medium"/>
</LinearLayout>